--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -60,3 +60,16 @@
   padding: 0%;
   margin: 0%;
 }
+
+.link {
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: underline;
+}
+
+/* Tablet responsiveness */
+@media (max-width: 768px) and (min-width: 481px) {
+}
+
+/* Mobile responsiveness */
+@media (max-width: 480px) {
+}
