--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,9 +3,15 @@
 	z-index: 1;
   background: linear-gradient(-45deg, #B0C3FA, #CFDBFA, #B0C3FA, #CFDBFA);	
   background-size: 400% 400%;
-	width: 100%;
+	width: 100vw;
 	height: 100vh;
 	animation: animate 15s ease infinite;
+}
+
+.home {
+  width: 100vw;
+	height: 100vh;
+  background-color: #FFFFFF;
 }
 
 @keyframes animate {
@@ -46,7 +52,8 @@
   margin-top: 1em;
   /* box-shadow: inset 5px 4px 20px #586ba2; */
   box-shadow: 2px 7px 20px #586ba2;
-  transition: background-color .25s ease-out
+  transition: background-color .25s ease-out;
+  cursor: pointer;
 }
 
 .button:hover {
@@ -64,6 +71,15 @@
 .link {
   font-family: Arial, Helvetica, sans-serif;
   text-decoration: underline;
+  cursor: pointer;
+  color: #282A2E;
+}
+
+.map {
+  width: 100%;
+  height: 40rem;
+  margin: 2em 0em;
+  z-index: 0;
 }
 
 /* Tablet responsiveness */
