adding gradinet and nimation for the background

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,6 +8,32 @@
 	animation: animate 15s ease infinite;
 }
 
+/****************GRADIENT BACKGROUND****************/
+
+.main {
+  background: linear-gradient(-45deg, #6E87CE, #CFDBFA, #B0C3FA, #FFFFFF); /* Set the initial gradient */
+  background-size: 200% 100%; /* Increase the size of the gradient */
+  animation: Gradient 10s ease infinite; /* Animate the gradient */
+  -webkit-animation: Gradient 8s ease infinite;
+	-moz-animation: Gradient 8s ease infinite;
+}
+
+@-webkit-keyframes Gradient {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+@-moz-keyframes Gradient {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+@keyframes Gradient { 
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+
 .home {
   width: 100vw;
 	height: 100vh;
