--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,14 +105,14 @@ a {
     color-scheme: dark;
   }
 }
-
+/* 
 label, select {
   color: #252525;
   font-family: Arial, Helvetica, sans-serif;
   font-family: 'Poppins', sans-serif;
-}
+} */
 
-input, textarea, select {
+/* input, textarea, select {
   background-color: rgb(232, 232, 232);
   color: #252525;
   border-radius: 7px;
@@ -120,8 +120,54 @@ input, textarea, select {
   min-width: 40%;
   margin-bottom: 1em;
   border: 1px solid #907c7c;
+} */
+
+input, textarea, select#text {
+  border: 0;
+  background-color: inherit;
+  border-bottom: 2px solid #dfdfdf;
+  outline: none;
+  color: #424242;
+  display: flex;
+  align-items: center;
+  cursor: text;
+  width: 100%;
+  font-size: 1em;
 }
 
-select {
+
+label, select {
+  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Poppins', sans-serif;
+  position: relative;
+  left: 0;
+  top: 1em;
+  font-size: 1em;
+  color: #424242;
+  width: 100%;
+  height: 1.8em;
+  transition: .3s ease-in-out;
+}
+
+input:focus+label, textarea:focus+label,
+input:valid+label, textarea:valid+label{
+  color: #626262;
+  height: 2em;
+  font-size: .8em;
+  top: 0em;
+  pointer-events: none;
+}
+
+
+input:focus, textarea:focus, select:focus,
+input:valid, textarea:valid, select:valid {
+  border-bottom: 2px solid #424242;
+}
+
+::-webkit-input-placeholder {
+  text-align: center;
+}
+
+:-moz-placeholder {
   text-align: center;
 }
