--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -71,10 +71,10 @@
 .cardform {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: left;
+  justify-content: flex-start;
   background-color: whitesmoke;
-  padding: 4em;
+  padding: 2em 6em;
   border-radius: 20px;
 }
 
@@ -93,7 +93,7 @@
   font-family: 'Poppins', sans-serif;
   color: #FFFFFF;
   text-align: center;
-  margin-top: 1em;
+  margin-top: 2em;
   /* box-shadow: inset 5px 4px 20px #586ba2; */
   box-shadow: 2px 7px 20px #586ba2;
   transition: background-color .25s ease-out;
@@ -132,4 +132,73 @@
 
 /* Mobile responsiveness */
 @media (max-width: 480px) {
+}
+
+/**************** LOST PET STYLING ****************/
+
+.breed > input, .color > input {
+  width: 100%;
+  padding: 12px 100px;
+  border-radius: 6px;
+
+  background: white;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.petType > select {
+  width: 100%;
+  padding: 9px 100px;
+
+  background: white;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.petName > input {
+  width: 100%;
+  padding: 12px 122px;
+
+  background: white;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.petNameType, .breedColor {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  box-sizing: border-box;
+  gap: 10px;
+}
+
+/* .petName, .petType {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 12px;
+} */
+
+
+.lastSeen > input, .contactInfo > .textArea {
+  width: 100%;
+  padding: 12px 24px;
+  border-radius: 6px;
+
+  background: white;
+  font-weight: 500;
+  font-size: 16px;
+
+  outline: none;
+  resize: none;
+}
+
+.petDes, .contactInfo {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 12px;
+}
+
+.contactInfo > .textArea, .petDes > .textArea {
+  padding: 12px max-content;
+  background: white;
 }
