--- a/styles/Form.module.css
+++ b/styles/Form.module.css
@@ -22,7 +22,8 @@
 }
 
 .columnflex {
-  width: 100%;
+  width: 80%;
+  height: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -36,10 +37,17 @@
   justify-content: center;
   background-color: whitesmoke;
   width: 50%;
-  height: fit-content;
+  height: 100%;
   padding: 3em 4em;
   border-radius: 20px;
   box-shadow: 2px 7px 20px #586ba2;
+}
+
+.cardform label {
+  font-family: 'Poppins', sans-serif;
+  color: #282A2E;
+  font-size: .8em;
+  margin-bottom: 0.5em;
 }
 
 .heading {
