--- a/styles/Map.module.css
+++ b/styles/Map.module.css
@@ -130,6 +130,17 @@
     padding: 0%;
     margin: 0%;
   }
+
+  .postList {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding: 0%;
+    margin: 0%;
+  }
   
   /* Tablet responsiveness */
   @media (max-width: 768px) and (min-width: 481px) {
