--- a/styles/Map.module.css
+++ b/styles/Map.module.css
@@ -149,3 +149,19 @@
   /* Mobile responsiveness */
   @media (max-width: 480px) {
   }
+
+
+  /**************** POST STYLING ****************/
+
+  .postList {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding: 0%;
+    margin: 0%;
+    flex-wrap: wrap;
+    align-content: center;
+}
