--- a/styles/Map.module.css
+++ b/styles/Map.module.css
@@ -134,6 +134,7 @@
   .postList {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     width: 100%;
