--- a/styles/Form.module.css
+++ b/styles/Form.module.css
@@ -23,7 +23,7 @@
 
 .columnflex {
   width: 80%;
-  height: 80%;
+  height: 85%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -213,6 +213,13 @@
   z-index: 0;
 }
 
+.field input, .field textarea {
+  font-family: 'Arial', sans-serif;
+  font-size: .8rem;
+  font-weight: 100;
+  color: #424242;
+}
+
 /* Tablet responsiveness */
 @media (max-width: 820px) and (min-width: 481px) {
   .cardform {
@@ -238,5 +245,3 @@
 /* Mobile responsiveness */
 @media (max-width: 480px) {
 }
-
-
