add image upload functionality

--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -46,9 +46,9 @@
 }
 
 .cardimage {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
 }
 
 .cardtext {
