--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -1,18 +1,17 @@
 .card {
     background-color: #fff;
-    border-radius: 5px;
+    border-radius: 20px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
     margin: 2rem auto;
     width: 400px;
     max-width: 400px;
-    height: 500px;
-    max-height: 500px;
+    height: 600px;
+    max-height: 600px;
 }
 
 .cardheader {
     background-color: #ed79a7;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    border-radius: 20px 20px 0 0;
     color: #fff;
     padding: 1rem;
 }
@@ -47,11 +46,66 @@
 
 .cardimage {
     width: 100%;
-    height: auto;
+    height: 180px;
     border-radius: 5px;
+    object-fit: cover;
 }
 
 .cardtext {
     font-size: 1rem;
     font-weight: lighter;
+}
+
+.cardinfo, .carddetails {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 1rem;
+}
+
+.cardinfoitem {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: stretch;
+    background-color: blanchedalmond;
+    border-radius: 20px;
+    padding: 1rem;
+    width: 30%;
+    height: 90px;
+}
+
+.cardinfotitle {
+    font-size: 0.75rem;
+    margin-bottom: .5rem;
+    color: rgb(204, 156, 90);
+}
+
+.cardinfosubtitle {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: .75rem;
+    font-weight: lighter;
+    text-transform: capitalize;
+    text-align: center;
+}
+
+.carddetails {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    margin: 1rem;
+}
+
+.carddetails p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.75rem;
+    font-weight: bold;
+    margin: 0;
+}
+
+.carddetails p ~ p {
+    margin-top: .5rem;
+    font-weight: 100;
+    color: rgb(153, 152, 152);
 }
