--- a/styles/Form.module.css
+++ b/styles/Form.module.css
@@ -36,7 +36,7 @@
 .cardform {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   background-color: whitesmoke;
   width: 50%;
@@ -88,6 +88,9 @@
 }
 
 .link {
+  position: fixed;
+  top: 2em;
+  right: 2em;
   font-family: Arial, Helvetica, sans-serif;
   text-decoration: underline;
   cursor: pointer;
@@ -100,11 +103,11 @@
   align-items: center;
   justify-content: center;
   background-color: whitesmoke;
-  width: 90%;
+  width: 100%;
   height: 300px;
   border-radius: 20px;
   border: 1px solid #424242;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
 }
 
 .uploadfield {
@@ -112,7 +115,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: 90%;
     margin-bottom: 1em;
 }
 
@@ -224,13 +227,6 @@
   width: 400px;
   padding: 0%;
   margin: 0%;
-}
-
-.link {
-  font-family: Arial, Helvetica, sans-serif;
-  text-decoration: underline;
-  cursor: pointer;
-  color: #282A2E;
 }
 
 .map {
