--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -86,7 +86,7 @@
   font-family: 'Poppins', sans-serif;
   color: #FFFFFF;
   text-align: center;
-  margin-top: 1em;
+  margin: 1em;
   /* box-shadow: inset 5px 4px 20px #586ba2; */
   box-shadow: 2px 7px 20px #586ba2;
   transition: background-color .25s ease-out;
@@ -114,9 +114,16 @@
 
 .map {
   width: 100%;
-  height: 40rem;
-  margin: 2em 0em;
+  height: 25rem;
+  margin: 0em 0em 2em 0em;
   z-index: 0;
+}
+
+.smallimage {
+  width: 200px;
+  height: auto;
+  object-fit: cover;
+  border-radius: 10px;
 }
 
 /* Tablet responsiveness */
