--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -41,7 +41,10 @@
 }
 
 .cardbody {
+    display: flex;
+    flex-direction: column;
     padding: 1rem;
+    width: 100%;
 }
 
 .cardimage {
@@ -89,15 +92,23 @@
     text-align: center;
 }
 
-.carddetails {
+.carddetails, .cardcontact {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    margin: 1rem;
+    margin: .5rem;
 }
 
-.carddetails p {
+.carddetails {
+    min-height: 70px;
+    justify-content: flex-start;
+    background-color: antiquewhite;
+    border-radius: 10px;
+    padding:  .75rem 1rem;
+}
+
+.carddetails p, .cardcontact p {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 0.75rem;
     font-weight: bold;
@@ -105,7 +116,38 @@
 }
 
 .carddetails p ~ p {
-    margin-top: .5rem;
+    margin-top: .25rem;
     font-weight: 100;
+    color: rgb(153, 152, 152);
+}
+
+.flexrow {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.cardcontactitem {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: stretch;
+    padding: 0 1rem;
+    width: fit-content;
+
+}
+
+.cardcontactitem p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.75rem;
+    font-weight: lighter;
+    margin-top: .5rem;
+}
+
+.timestamp {
+    font-size: 0.75rem;
+    font-weight: lighter;
     color: rgb(153, 152, 152);
 }
