--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -56,7 +56,7 @@
 }
 
 .wrappercolumn {
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -100,6 +100,7 @@
 .animationcontainer {
   display: flex;
   align-items: center;
+  justify-content: center;
   width: 400px;
   padding: 0%;
   margin: 0%;
@@ -132,4 +133,10 @@
 
 /* Mobile responsiveness */
 @media (max-width: 480px) {
+  .animationcontainer {
+    width: 300px;
+  }
+  .heading {
+    font-size: 1.5rem;
+  }
 }
