--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -44,3 +44,88 @@
     padding: 0;
     margin: 0;
 }
+
+.bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #6E87CE;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+  
+.hamburgermenu {
+    display: none;
+}
+
+/* mobile */
+
+@media screen and (max-width: 768px) {
+    .flexrow {
+        padding: 1rem 2rem;
+    }
+    .navigation {
+        display: none;
+    }
+    .hamburgermenu {
+        display: inline-block;
+        cursor: pointer;
+        z-index: 11;
+    }
+
+    .mobilemenu {
+        background-color:#B0C3FA;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 0;
+        left: 0px;
+        width: 65vw;
+        height: 100%;
+        z-index: 10;
+        animation: slidein 0.5s ease-out;
+    }
+
+    @keyframes slidein {
+        from {
+            transform: translateX(-100%);
+        }
+        to {
+            transform: translateX(0);
+        }
+    }
+
+    .overlay {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0, 0, 0, 0.2);
+        z-index: 2;
+        cursor: pointer;
+    }
+
+
+    .mobilemenu.active {
+        transform: translateX(0);
+    }
+
+    .mobilemenu ul {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
+
+    .mobilemenu li {
+        margin: 2rem 0;
+    }
+
+}
