--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -70,33 +70,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    overflow: scroll;
+    overflow: hidden;
 }
 
 .heading {
     font-family: 'Poppins', sans-serif;
     color: #282A2E;
     text-align: center;
-    margin: 2em;
-}
-
-.button {
-    background-color: #6E87CE; 
-    padding: 1em 3em;
-    border-radius: 50px;
-    border: 0;
-    font-family: 'Poppins', sans-serif;
-    color: #FFFFFF;
-    text-align: center;
-    margin-top: 1em;
-    /* box-shadow: inset 5px 4px 20px #586ba2; */
-    box-shadow: 2px 7px 20px #586ba2;
-    transition: background-color .25s ease-out;
-    cursor: pointer;
-}
-
-.button:hover {
-    background-color: #5a6fa8;
+    margin: 1rem;
 }
 
 .animationcontainer {
@@ -105,46 +86,6 @@
     width: 400px;
     padding: 0%;
     margin: 0%;
-}
-
-.link {
-    font-family: Arial, Helvetica, sans-serif;
-    text-decoration: underline;
-    cursor: pointer;
-    color: #282A2E;
-}
-
-.map {
-    width: 100%;
-    min-height: 30%;
-    margin: 2em 0em;
-    z-index: 0;
-}
-
-.postContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    padding: 0%;
-    margin: 0%;
-}
-
-  
-.map {
-    width: 100%;
-    height: 40rem;
-    margin: 2em 0em;
-    z-index: 0;
-}
-
-.smallimage {
-    width: 200px;
-    height: auto;
-    object-fit: cover;
-    border-radius: 10px;
 }
 
 .columnflex p {
