--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -83,6 +83,7 @@
 .animationcontainer {
     display: flex;
     align-items: center;
+    justify-content: center;
     width: 400px;
     padding: 0%;
     margin: 0%;
