--- a/styles/globals.css
+++ b/styles/globals.css
@@ -83,16 +83,27 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background: linear-gradient(-45deg, #6E87CE, #CFDBFA, #B0C3FA, #FFFFFF); /* Set the initial gradient */
+  background-size: 200% 100%; /* Increase the size of the gradient */
+  animation: Gradient 10s ease infinite; /* Animate the gradient */
+  -webkit-animation: Gradient 8s ease infinite;
+	-moz-animation: Gradient 8s ease infinite;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@-webkit-keyframes Gradient {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+@-moz-keyframes Gradient {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+@keyframes Gradient { 
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
 }
 
 a {
